show images only when they are done loading. Default theme uses a dark background so that text is readable while they are loaded. https://projects.ecoinformatics.org/ecoinfo/issues/6145

--- a/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
@@ -25,6 +25,7 @@ Bold 700
     
     body {
       color: #333333;
+      background: rgba(0, 0, 0, .8);
       font: 400 15px/20px "Source Sans Pro", "Helvetica Nueue", "Helvetica", "sans serif";
       min-height: 100%;
       position: relative;
